Quartz sync: Oct 24, 2024, 11:42 AM

--- a/content/5.Semester/CompInt/VL/1.VL/1.VL - CompInt.md
+++ b/content/5.Semester/CompInt/VL/1.VL/1.VL - CompInt.md
@@ -7,73 +7,190 @@ fach: "[[Computational Intelligence]]"
 Thema:
 Benötigte Zeit:
 date created: Wednesday, 23. October 2024, 20:00
-date modified: Wednesday, 23. October 2024, 20:00
+date modified: Thursday, 24. October 2024, 11:38
 ---
 
-# Computational Intelligence (Wintersemester 2024/2025)
+# Einführung in die Computational Intelligence
 
-## Kursübersicht
+## Überblick
 
-Dieser Kurs beschäftigt sich mit den Grundlagen und Methoden der **Computational Intelligence** (CI). CI umfasst eine Reihe von Algorithmen, die **intelligentes Verhalten** zeigen, und wird in vielen Bereichen der Künstlichen Intelligenz (KI) eingesetzt.
+**Computational Intelligence (CI)** ist ein breit gefächertes Gebiet innerhalb der Informatik, das sich mit Algorithmen beschäftigt, die scheinbar intelligentes Verhalten zeigen. Es umfasst verschiedene Techniken und Methoden zur Entwicklung intelligenter Systeme. In dieser Vorlesung werden wir uns mit den grundlegenden Konzepten, Methoden und aktuellen Entwicklungen in diesem Bereich auseinandersetzen.
 
-Der Kurs bietet eine Mischung aus **Vorlesungen**, **Tutorien**, **Übungen** und einer **Abschlussprüfung**.
+## Sprachwahl: Deutsch vs. Englisch
 
----
+Die Vorlesungsfolien sind konsequent auf Englisch gehalten, um den informatischen Standards zu entsprechen und die internationale Verständlichkeit zu gewährleisten. Die gesprochene Sprache während der Vorlesung kann flexibel gewählt werden:
 
-## Vorlesungsinhalte
+- **Deutsch bevorzugt:** Etwa ein Drittel der Studierenden.
+- **Englisch bevorzugt:** Etwa 20% der Studierenden.
 
-### 1. Einführung in Computational Intelligence
+**Entscheidung:** Die Vorlesung wird auf Deutsch fortgesetzt, während die Folien und das begleitende Lesematerial auf Englisch verfügbar sind. Dies ermöglicht allen Studierenden, den Kursinhalten zu folgen, unabhängig von ihrer bevorzugten Sprache.
 
-- Definition von CI: Algorithmen, die scheinbar intelligentes Verhalten aufweisen.
-- Ziel: Untersuchung von Methoden, um Intelligenz zu erzeugen.
+## Kursstruktur
 
-### 2. Themen der Künstlichen Intelligenz
+### Vorlesungen und Übungen
 
-- **Logik**, **Sprache** und **Kommunikation**
-- **Optimierung**
-- **Soziales Verhalten** und **Spieltheorie**
+- **Vorlesungen:**
 
-### 3. Arten von Intelligenz
+  - **Frequenz:** Etwa einmal pro Woche, vorzugsweise dienstags.
+  - **Inhalt:** Vorstellung und Diskussion der Hauptthemen der Computational Intelligence.
 
-- **Symbolische** vs. **statistische** Ansätze
-- **Einzelagenten**-Systeme vs. **Multiagenten**-Systeme
-- **Schwache** vs. **starke** Intelligenz
-- **Narrow AI** vs. **General AI**
+- **Übungen:**
+  - **Frequenz:** In der Regel donnerstags.
+  - **Typen:**
+    - **Working Exercises:** Klassische Übungsaufgaben, die vorab zur Bearbeitung bereitgestellt werden. In der Übungssitzung werden diese Aufgaben gemeinsam besprochen und Lösungen erklärt.
+    - **Reading Exercises:** Detaillierte Durchsicht und Diskussion von wissenschaftlichen Papern zur Stärkung der Fähigkeiten im Lesen und Verstehen wissenschaftlicher Literatur. Ziel ist es, relevante Paper rechtzeitig vor den Übungen zur Verfügung zu stellen und deren Inhalte gemeinsam zu analysieren und zu diskutieren.
 
-### 4. Methoden
+### Python-Tutorial
 
-- **Q-Learning**: Eine Methode des Reinforcement Learnings, bei dem Agenten durch Belohnungen lernen.
-- **Training von tiefen neuronalen Netzen**
+Ein wichtiger Bestandteil des Kurses ist das **Python-Tutorial**, das nächste Woche startet. Dieses Tutorial richtet sich an alle Studierenden, die ihre Python-Kenntnisse auffrischen oder neu erlernen möchten. Grundkenntnisse in Python sind von Vorteil, da viele Übungsaufgaben auf dieser Programmiersprache basieren. Für diejenigen, die sich mit Python noch nicht gut auskennen, wird ein zusätzliches Tutorial angeboten, um die notwendigen Grundlagen zu vermitteln.
 
----
+### Prüfungen und Klausuren
 
-## Lernmaterialien und Übungen
+- **Klausur:**
+  - **Zeitpunkt:** Am Ende des Semesters.
+  - **Details:** Der genaue Termin wird noch festgelegt, um Terminkollisionen zu vermeiden. Es besteht die Möglichkeit, auf Deutsch oder Englisch zu antworten.
+- **Nachklausur:**
 
-- Wichtige Literatur: Kruse, Mostaghim, Borgelt, Braune, Steinbrecher. _Computational Intelligence – A Methodological Introduction_, Springer, 2022.
-- Übungsaufgaben: Regelmäßige Diskussionen und Leseübungen, z.B. **Reading Exercise #1** am 07. November 2024.
+  - **Angebot:** Für Studierende, die die Klausur nicht bestehen oder andere Termine haben, wird eine Nachklausur angeboten.
 
----
+- **Wörterbuch:**
+  - **Regelung:** Ein Wörterbuch ist während der Klausur erlaubt, um den Zugang zu Fachbegriffen zu erleichtern.
 
-## Zusatzmaterialien
+## Definition und Abgrenzung
 
-- **Stable Diffusion**: Ein Tool zur Erzeugung von Bildern durch künstliche Intelligenz.
-- **ChatGPT**: Ein Beispiel für die Anwendung von Sprachmodellen in der KI.
+### Was ist Computational Intelligence?
 
----
+**Computational Intelligence (CI)** beschäftigt sich mit Algorithmen, die scheinbar intelligentes Verhalten zeigen. Es umfasst verschiedene Techniken und Methoden zur Entwicklung intelligenter Systeme, die in der Lage sind, komplexe Probleme zu lösen und sich an dynamische Umgebungen anzupassen.
 
-## Diskussionen im Kurs
+### Unterschied zu Artificial Intelligence und Machine Learning
 
-- Wie wird Intelligenz erzeugt? Ansätze aus der **Logik/Psychologie** im Vergleich zu biologischen Ansätzen.
-- Unterscheidung zwischen **symbolischer** und **statistischer** KI.
-- Was sind die Unterschiede zwischen **schwacher** und **starker** Intelligenz?
+- **Artificial Intelligence (AI):**
+  - Ein umfassender Begriff, der alle Aspekte der künstlichen Intelligenz abdeckt, einschließlich sowohl symbolischer als auch statistischer Methoden.
+- **Machine Learning (ML):**
+  - Ein Teilgebiet der AI, das sich stark auf statistische Verfahren und die Verarbeitung großer Datenmengen konzentriert.
+- **Computational Intelligence (CI):**
+  - Umfasst AI und ML und erweitert diese um zusätzliche Methoden wie Optimierung und Schwarmintelligenz.
 
----
+**Visualisierung: Venn-Diagramm**
 
-## Wichtige Fragen im Kurs
+```plaintext
+Artificial Intelligence
+┌───────────────────────────┐
+│                           │
+│    Machine Learning       │
+│    ┌─────────────────┐    │
+│    │                 │    │
+│    │ Computational    │    │
+│    │ Intelligence     │    │
+│    │                 │    │
+│    └─────────────────┘    │
+│                           │
+└───────────────────────────┘
+```
 
-- Wo beobachten wir intelligentes Verhalten?
-- Können nur Gehirne intelligent sein?
-- Wie erkennt man Intelligenz in Maschinen?
+# Turing-Test und Intelligenzmessung
+
+## Der Turing-Test
+
+Alan Turing definierte den **Turing-Test** im Jahr 1950 als Kriterium, um festzustellen, ob eine Maschine intelligentes Verhalten zeigt. Der Test besteht darin, dass eine menschliche Prüferin oder ein Prüfer mit einer Maschine und einem Menschen kommuniziert, ohne zu wissen, wer wer ist. Wenn die Maschine den Prüfer täuschen kann, sodass dieser sie nicht von dem Menschen unterscheiden kann, gilt die Maschine als intelligent.
+
+## Diskussion über Intelligenz
+
+- **Definition von Intelligenz:** Ein schwieriges Konzept mit vielen unterschiedlichen Ansätzen. Es gibt keine einheitliche, formale Definition, was Intelligenz ausmacht.
+- **Messbarkeit:** Auch ohne eine konstruktive Definition kann Intelligenz durch Verhalten und Leistungsfähigkeit in bestimmten Aufgaben gemessen werden. Beispiele hierfür sind der Turing-Test oder spezifische Intelligenztests.
+
+# Aktueller Stand der KI
+
+## Stable Diffusion und Bildgenerierung
+
+**Stable Diffusion** ist ein fortschrittliches Modell zur Bildgenerierung, entwickelt von Kollegen der LMU. Es basiert auf der Technologie von **DALL·E**, einem KI-System, das in der Lage ist, aus textuellen Beschreibungen detaillierte Bilder zu erzeugen.
+
+**Beispiele:**
+
+- **Roboterarm und Herdplatte:** Ein Bild eines Roboters, der eine heiße Herdplatte berührt und sich verletzt.
+- **Batman und Meditation:** Kombination bekannter Figuren mit abstrakten Konzepten.
+- **Steve Jobs im mittelalterlichen Stil:** Demonstration der Fähigkeit der KI, bekannte Persönlichkeiten in verschiedenen künstlerischen Stilen darzustellen.
+
+**Fazit:**
+Diese Fortschritte zeigen, wie weit die statistischen Methoden der KI mittlerweile sind und eröffnen neue Diskussionen über Kreativität und Intelligenz in maschinellen Systemen.
+
+# Symbolische vs. Statistische KI
+
+## Symbolische KI
+
+- **Ansatz:** Nutzung von High-Level-Regeln und Logik zur Modellierung intelligenten Verhaltens.
+- **Beispiel:** `if hot_plate then do_not_touch`
+- **Geschichte:** Lange Zeit dominierter Ansatz in der KI-Forschung, jedoch oft als zu starr und unflexibel kritisiert.
+
+## Statistische KI
+
+- **Ansatz:** Nutzung von großen Datenmengen und statistischen Methoden zur Mustererkennung und Entscheidungsfindung.
+- **Beispiel:** Maschinelles Lernen zur Erkennung von heißen Herdplatten anhand zahlreicher Trainingsbeispiele.
+- **Vorteile:** Flexibilität und Leistungsfähigkeit durch große Datenmengen und erhöhte Rechenleistung.
+- **Nachteile:** Bedarf an umfangreichen Daten und Rechenressourcen, weniger interpretierbare Modelle.
+
+## Hybridansätze
+
+Es gibt erste Ansätze, die versuchen, symbolische und statistische Methoden zu kombinieren, um die Vorteile beider Welten zu nutzen. Diese Ansätze sind jedoch noch in der Entwicklung und haben bisher keine weitreichenden Erfolge erzielt.
+
+# Methoden und Techniken der Computational Intelligence
+
+## Reinforcement Learning
+
+**Reinforcement Learning** ist eine Methode des maschinellen Lernens, bei der ein Agent durch Belohnungen und Strafen lernt, optimale Handlungen auszuführen. Es eignet sich besonders zur Generierung von Verhalten, das in dynamischen Umgebungen adaptiert werden kann.
+
+## Neuronale Netze
+
+**Neuronale Netze** sind inspiriert vom menschlichen Gehirn und bestehen aus vernetzten Knoten (Neuronen), die Informationen verarbeiten. Sie sind besonders effektiv bei der Mustererkennung und der Verarbeitung komplexer Datenstrukturen.
+
+## Evolutionäre Algorithmen
+
+**Evolutionäre Algorithmen** sind Optimierungsverfahren, die von den Prinzipien der biologischen Evolution inspiriert sind. Sie verwenden Mechanismen wie Mutation, Kreuzung und Selektion, um Lösungen für komplexe Probleme zu finden.
+
+## Schwarmintelligenz (Swarm Intelligence)
+
+**Schwarmintelligenz** bezieht sich auf die kollektive Verhaltensweise von dezentralisierten, selbstorganisierten Systemen, typischerweise inspiriert durch biologische Schwärme wie Fische oder Vögel. Diese Systeme zeigen oft komplexes und intelligentes Verhalten trotz einfacher individueller Regeln.
+
+## Fuzzy Logic
+
+**Fuzzy Logic** ist eine Form der Logik, die mit unscharfen Mengen arbeitet und nicht-binäre Wahrheitswerte zulässt. Sie wird verwendet, um Unsicherheiten und Unschärfen in der Entscheidungsfindung zu modellieren.
+
+## Multi-Agent-Systeme
+
+**Multi-Agent-Systeme** bestehen aus mehreren interagierenden Agenten, die zusammenarbeiten oder konkurrieren, um bestimmte Ziele zu erreichen. Sie sind besonders nützlich zur Modellierung von komplexen, dynamischen Umgebungen.
+
+# Praktische Beispiele und Anwendungen
+
+## Beispiel 1: Roboterarm und Herdplatte
+
+Ein Roboterarm, der eine heiße Herdplatte berührt und sich verletzt, veranschaulicht den Unterschied zwischen symbolischer und statistischer KI. Während symbolische KI einfache Regeln verwendet (`if hot_plate then do_not_touch`), benötigt statistische KI umfangreiche Daten, um solche Verhaltensweisen zu erlernen.
+
+## Beispiel 2: Bildgenerierung mit Stable Diffusion
+
+Stable Diffusion ermöglicht die Erstellung detaillierter Bilder aus textuellen Beschreibungen. Dies zeigt die Fortschritte in der statistischen KI und wirft Fragen zur Kreativität und Intelligenz maschineller Systeme auf.
+
+# Weiterführende Literatur und Ressourcen
+
+## Empfohlene Bücher und Papers
+
+- **Alan Turing:** „Computing Machinery and Intelligence“ (1950)
+- **Russell & Norvig:** _Artificial Intelligence: A Modern Approach_
+- **Seth Lloyd:** _The Book of Why: The New Science of Cause and Effect_
+
+# Glossar
+
+- **Agent:** Ein Objekt, das Beobachtungen von seiner Umgebung erhält und darauf basierend Aktionen ausführt.
+- **Reinforcement Learning:** Eine Methode des maschinellen Lernens, bei der ein Agent durch Belohnungen und Strafen lernt, optimale Handlungen auszuführen.
+- **Schwarmintelligenz (Swarm Intelligence):** Ein Konzept, bei dem viele einfache Agenten durch lokale Interaktionen komplexes und intelligentes Verhalten zeigen.
+- **Fuzzy Logic:** Eine Form der Logik, die mit unscharfen Mengen arbeitet und nicht-binäre Wahrheitswerte zulässt.
+- **Evolutionary Algorithms:** Optimierungsverfahren, die von den Prinzipien der biologischen Evolution inspiriert sind.
+- **Multi-Agent-Systeme:** Systeme, die aus mehreren interagierenden Agenten bestehen, die zusammenarbeiten oder konkurrieren, um bestimmte Ziele zu erreichen.
+
+# Literatur
+
+1. Turing, A. M. (1950). _Computing Machinery and Intelligence_. Mind, 59(236), 433-460.
+2. Russell, S., & Norvig, P. (2020). _Artificial Intelligence: A Modern Approach_ (4. Aufl.). Pearson.
+3. Lloyd, S. (Jahr). _The Book of Why: The New Science of Cause and Effect_.
 
 <!-- DISQUS SCRIPT COMMENT START -->
 
