Quartz sync: Oct 30, 2024, 5:12 PM

--- a/content/5.Semester/CompInt/VL/3.VL/3.VL - CompInt.md
+++ b/content/5.Semester/CompInt/VL/3.VL/3.VL - CompInt.md
@@ -7,8 +7,11 @@ fach: "[[Computational Intelligence]]"
 Thema:
 Benötigte Zeit:
 date created: Wednesday, 23. October 2024, 20:00
-date modified: Thursday, 24. October 2024, 11:25
+date modified: Friday, 25. October 2024, 14:32
 ---
+
+_Start:_ Folie 80
+_Ende:_ Folie 97
 
 # Einführung und Orientierung
 
@@ -89,6 +92,12 @@ Wir können komplexere Ziele definieren, z.B.:
 
 ### Zielsetzung
 
+`gamma holds if the agent never executes action "do_nothing" twiche in a row`
+
+$$
+\gamma(\pi) \iff \overline{\exists}t: a_{t}= a_{t+1} = \text{"do\_nothing"}
+$$
+
 Ein häufiges Sicherheitskriterium ist, dass der Agent nicht gegen Wände läuft. Mathematisch ausgedrückt:
 
 $$
@@ -102,6 +111,47 @@ Dies bedeutet, dass der Agent niemals die Aktion `Go North` ausführen darf, wen
 - **Pfadoptimierung**: Der Agent soll den kürzesten Weg zu einem Zielpunkt finden.
 - **Exploration**: Der Agent soll alle erreichbaren Felder innerhalb des Gitters erkunden.
 - **Interaktion**: Der Agent soll mit Objekten innerhalb des Gitters interagieren (z.B. Objekte aufnehmen oder ablegen).
+
+## 2.1 Resource / StockTrading
+
+$$
+\begin{aligned}
+o^{*} &\in \mathscr{O} \\
+o^{*}_{x}&=\text{"Reddit says buy"}+x\\
+\end{aligned}
+$$
+
+$\gamma$ `holds iff everytime Reddit says,everyone should buy` $\alpha$ `stock, we buy 10 of that stock`
+
+$$
+\gamma(\pi)\iff\forall o_{t}\ \in \mathscr{O}: \exists x: o_{t}= o_{t}^{*}\implies (\text{'buy'},x,10) = \alpha_t
+$$
+
+### Possible Policy
+
+`Nur ein Beispiel nicht komplett korrekt`
+
+$$
+\Gamma(o)=
+\begin{cases}
+(\text{'buy','Gamestop'},0),  &\text{ if o = "Gamestop increase"}  \\  \\
+(\text{'sell','Gamestop'},1),  &\text{ otherwise} \\
+\end{cases}
+$$
+
+## 2.2 Personal Life Assistant
+
+$\gamma$ `holds iff PLA recommends drinking water atleast six times a day`
+
+$$
+\mathscr{A}^{*} \in \mathscr{A} \text{so that } a^{*}\in \mathscr{A}^{*} \text{means "drinking water"}
+$$
+
+- Assume: 50 recommandations (=action) per day
+
+$$
+\gamma(\pi)\iff \forall t: \exists t^{'}\in [t \ ;\ t+50]:\:a_{t^{'}}\in\mathscr{A}^*
+$$
 
 ## 3. Cutting Marble
 
@@ -199,7 +249,7 @@ Anstatt systematisch alle Policies zu durchlaufen, wählt Random Search zufälli
 3. **Wiederholung**: Dieser Prozess wird für eine vorgegebene Anzahl von Versuchen (`n`) wiederholt.
 4. \*\*R
 
-ückgabe\*\*: Die erste Policy, die das Ziel erfüllt, wird zurückgegeben.
+**Rückgabe**: Die erste Policy, die das Ziel erfüllt, wird zurückgegeben.
 
 ### Beispielcode
 
@@ -294,8 +344,6 @@ Robot
 - **Modularität**: Einfache Verhaltensweisen können wiederverwendet und in verschiedenen Kontexten eingesetzt werden.
 
 ## Beispiel: Behavior Tree aus der Unreal Engine
-
-![Behavior Tree Example](https://docs.unrealengine.com/4.26/en-US/InteractiveExperiences/BehaviorTrees/BehaviorTreeEditor/)
 
 _Abbildung: Beispiel eines Behavior Trees aus der Unreal Engine._
 
@@ -412,11 +460,11 @@ comments powered by Disqus.
 <div id="disqus_thread"></div>
 <script>
     /**
-    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    * RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    * LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables */
     /*
     var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.url = PAGE_URL; // Replace PAGE_URL with your page's canonical URL variable
     this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
     };
     */
